--- a/Roadmap.sh Portfolio Website/index.html
+++ b/Roadmap.sh Portfolio Website/index.html
@@ -106,13 +106,13 @@
           <h2 class="teachers-reviews">Reviews from my Teachers</h2>
                
           <div class="reviews">
-              <p class="review-description-one">John Doe was a brilliant student; always stood out with his assignments.
+              <p class=" review review-description-one">John Doe was a brilliant student; always stood out with his assignments.
     <span>Jone Doe <br> Assistant Professor</span>
                </p>
-               <p class="review-description-two">John Doe was a brilliant student; always stood out with his assignments.
+               <p class="review review-description-two">John Doe was a brilliant student; always stood out with his assignments.
     <span>Jone Doe <br> Assistant Professor</span>
                </p>
-               <p class="review-description-three">John Doe was a brilliant student; always stood out with his assignments.
+               <p class="review review-description-three">John Doe was a brilliant student; always stood out with his assignments.
     <span>Jone Doe <br> Assistant Professor</span>
                </p>
                </div>
